# MalloyStudio

./: .gitignore  CMakeLists.txt  README.md  build.ps1
.claude/: settings.local.json
MalloyStudioJS/: MalloyStudio.html  app.jsx  audit.html  dashboard.jsx  editor.jsx  libraries.jsx  primitives.jsx  record.jsx  secondary.jsx  shell.jsx  tokens.css
build_webtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  MalloyStudio.slnx  MalloyStudio.vcxproj  MalloyStudio.vcxproj.filters  MalloyStudioTests.vcxproj  MalloyStudioTests.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_webtest/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
docs/: ARCHITECTURE.md  CHANGELOG.md  PROJECT_FORMAT.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/audio/: AudioController.cpp  AudioController.h  AudioInput.h
src/capture/: CameraCapture.cpp  CameraCapture.h  CameraCaptureSession.cpp  CameraCaptureSession.h  CaptureController.cpp  CaptureController.h  DxgiCapture.cpp  DxgiCapture.h  MonitorInfo.h  WasapiCapture.cpp  WasapiCapture.h  WindowCapture.cpp  WindowCapture.h  WindowCaptureSession.cpp  WindowCaptureSession.h
src/input/: HotkeyManager.cpp  HotkeyManager.h
src/media/: TimedSource.h
src/model/: Canvas.h  FilterEffect.cpp  FilterEffect.h  Scene.cpp  Scene.h  SceneCollection.cpp  SceneCollection.h  SceneItem.cpp  SceneItem.h  Source.cpp  Source.h
src/project/: ClipsRegistry.cpp  ClipsRegistry.h  MediaRegistry.cpp  MediaRegistry.h  ProjectDocument.cpp  ProjectDocument.h  ProjectRegistry.cpp  ProjectRegistry.h
src/recording/: EncoderPipeline.cpp  EncoderPipeline.h  EncoderRegistry.cpp  EncoderRegistry.h  MediaController.cpp  MediaController.h  OutputSettings.h  RenderQueue.cpp  RenderQueue.h  RingTimedFrameSource.cpp  RingTimedFrameSource.h  RingTimedPcmSource.cpp  RingTimedPcmSource.h  StreamSettings.cpp  StreamSettings.h  StreamingPipeline.cpp  StreamingPipeline.h
src/resources/: malloy.qrc
src/resources/styles/: dark.qss
src/ui/: AudioMixerPanel.cpp  AudioMixerPanel.h  CommandPalette.cpp  CommandPalette.h  ControlsBar.cpp  ControlsBar.h  HotkeysDialog.cpp  HotkeysDialog.h  IconFactory.cpp  IconFactory.h  InspectorPanel.cpp  InspectorPanel.h  MicrophonePickerDialog.cpp  MicrophonePickerDialog.h  MonitorPickerDialog.cpp  MonitorPickerDialog.h  OnboardingOverlay.cpp  OnboardingOverlay.h  OutputSettingsDialog.cpp  OutputSettingsDialog.h  PreviewWidget.cpp  PreviewWidget.h  ScenesPanel.cpp  ScenesPanel.h  SourcesPanel.cpp  SourcesPanel.h  StreamSettingsDialog.cpp  StreamSettingsDialog.h  Theme.cpp  Theme.h  VuMeter.cpp  VuMeter.h  WindowPickerDialog.cpp  WindowPickerDialog.h
src/ui/components/: MeterBar.cpp  MeterBar.h  PanelFrame.cpp  PanelFrame.h  Placeholder.cpp  Placeholder.h
src/ui/dashboard/: Dashboard.cpp  Dashboard.h
src/ui/shell/: AppShell.cpp  AppShell.h  IconRail.cpp  IconRail.h  NavModel.h  StudioStatusBar.cpp  StudioStatusBar.h  WorkspaceHeader.cpp  WorkspaceHeader.h
src/ui/workspaces/: AILabWorkspace.cpp  AILabWorkspace.h  EditorWorkspace.cpp  EditorWorkspace.h  LibraryWorkspaces.cpp  LibraryWorkspaces.h  PlaceholderWorkspace.cpp  PlaceholderWorkspace.h  RecordingWorkspace.cpp  RecordingWorkspace.h  SettingsWorkspace.cpp  SettingsWorkspace.h  StreamingWorkspace.cpp  StreamingWorkspace.h
tests/: model_tests.cpp
